apply plugin: 'kotlin'
apply plugin: 'maven-publish'
apply plugin: 'jacoco'
apply plugin: 'pmd'
apply plugin: 'kotlin-kapt'
apply plugin: 'java'

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'com.squareup:kotlinpoet:1.15.0'
    implementation 'com.squareup:kotlinpoet-metadata:1.15.0'
    implementation project(path: ':crystal-map-api', configuration: 'default')
    implementation 'org.apache.commons:commons-lang3:3.17.0'
    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.18.3"
    implementation 'com.j2html:j2html:1.6.0'
    implementation "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.9.0"
    testImplementation 'com.google.testing.compile:compile-testing:0.21.0'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'dev.zacsweers.kctfork:core:0.7.0'
    testImplementation 'org.mockito:mockito-core:5.17.0'
    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2'
    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
    kapt "com.google.auto.service:auto-service:1.1.1"
    compileOnly "com.google.auto.service:auto-service:1.1.1"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
}

targetCompatibility = JavaVersion.VERSION_17
sourceCompatibility = JavaVersion.VERSION_17

java {
    withSourcesJar()
    withJavadocJar()
}

if (JavaVersion.current() >= JavaVersion.VERSION_16) {
    test {
        jvmArgs(
                "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
                "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        )
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId project.group
            artifactId project.name
            version project.version
            from components.java
        }
    }
}

jacoco {
    toolVersion = "0.8.13"
}

jacocoTestReport {
    group 'verification'
    dependsOn 'test'

    reports {
        xml.required = true
        html.required = false
    }
}



